--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,12 @@
         android:background="@color/black"
         android:layout_weight="1">
 
-        <com.joshsoftware.urdhvam.WaveformView
+        <com.joshsoftware.urdhvam.customView.WaveformView
             android:id="@+id/waveform"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <com.joshsoftware.urdhvam.MarkerView
+        <com.joshsoftware.urdhvam.customView.MarkerView
             android:id="@+id/startmarker"
             android:nextFocusDown="@+id/endmarker"
             android:layout_width="wrap_content"
@@ -24,7 +24,7 @@
             android:src="@drawable/marker_left"
             android:contentDescription="@string/start_marker" />
 
-        <com.joshsoftware.urdhvam.MarkerView
+        <com.joshsoftware.urdhvam.customView.MarkerView
             android:id="@+id/endmarker"
             android:nextFocusUp="@+id/startmarker"
             android:nextFocusDown="@+id/info"
@@ -91,7 +91,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:padding="20dp"
+        android:padding="10dp"
         android:orientation="horizontal">
 
         <TextView
@@ -113,6 +113,7 @@
             android:layout_marginLeft="10dip"
             android:layout_marginRight="30dip"
             android:layout_width="70dip"
+            android:textColor="#ffffffff"
             android:layout_height="wrap_content"
             android:gravity="center" />
 
@@ -131,6 +132,7 @@
         <EditText
             android:id="@+id/endtext"
             android:textSize="16sp"
+            android:textColor="#ffffffff"
             android:inputType="number|numberDecimal"
             android:layout_width="70dip"
             android:layout_height="wrap_content"
@@ -138,14 +140,19 @@
             android:gravity="center" />
 
     </LinearLayout>
-    <ImageView
-        android:id="@+id/btn_record"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:background="@android:drawable/bottom_bar"
-        android:src="@android:drawable/presence_audio_away"
-        />
-
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:padding="10dp"
+        android:background="@color/colorPrimary">
+        <ImageView
+            android:id="@+id/btn_record"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:background="@drawable/ic_mic_yellow_24dp"
+            />
+    </LinearLayout>
 
 </LinearLayout>
