--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="0px"
-        android:background="@color/black"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:background="@color/black">
 
         <com.joshsoftware.urdhvam.customView.WaveformView
             android:id="@+id/waveform"
@@ -18,72 +18,74 @@
 
         <com.joshsoftware.urdhvam.customView.MarkerView
             android:id="@+id/startmarker"
-            android:nextFocusDown="@+id/endmarker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/marker_left"
-            android:contentDescription="@string/start_marker" />
+            android:contentDescription="@string/start_marker"
+            android:nextFocusDown="@+id/endmarker"
+            android:src="@drawable/marker_left" />
 
         <com.joshsoftware.urdhvam.customView.MarkerView
             android:id="@+id/endmarker"
-            android:nextFocusUp="@+id/startmarker"
-            android:nextFocusDown="@+id/info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/marker_right"
-            android:contentDescription="@string/end_marker" />
+            android:contentDescription="@string/end_marker"
+            android:nextFocusDown="@+id/info"
+            android:nextFocusUp="@+id/startmarker"
+            android:src="@drawable/marker_right" />
 
     </RelativeLayout>
 
     <TextView
         android:id="@+id/info"
-        android:nextFocusUp="@+id/endmarker"
-        android:nextFocusDown="@+id/play"
+        style="@style/AudioFileInfoOverlayText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/AudioFileInfoOverlayText"
-        android:gravity="center" />
+        android:gravity="center"
+        android:nextFocusDown="@+id/play"
+        android:nextFocusUp="@+id/endmarker" />
 
     <LinearLayout
         style="@style/ToolbarBackground"
         android:layout_width="fill_parent"
         android:layout_height="62dip"
-        android:gravity="center" >
+        android:gravity="center"
+        android:visibility="gone">
 
         <ImageButton
             android:id="@+id/rew"
+            style="@android:style/MediaButton"
             android:layout_width="64dip"
             android:layout_height="52dip"
-            android:layout_marginTop="6dip"
             android:layout_marginBottom="6dip"
-            style="@android:style/MediaButton"
+            android:layout_marginTop="6dip"
             android:contentDescription="@string/rewind"
             android:src="@android:drawable/ic_media_previous" />
 
         <ImageButton
-            android:id="@+id/play"
+
+            style="@android:style/MediaButton"
             android:layout_width="71dip"
             android:layout_height="52dip"
-            android:layout_marginTop="6dip"
             android:layout_marginBottom="6dip"
-            style="@android:style/MediaButton"
+            android:layout_marginTop="6dip"
             android:contentDescription="@string/play"
             android:src="@android:drawable/ic_media_play" />
 
         <ImageButton
             android:id="@+id/ffwd"
+            style="@android:style/MediaButton"
             android:layout_width="64dip"
             android:layout_height="52dip"
+            android:layout_marginBottom="6dip"
             android:layout_marginRight="5dip"
             android:layout_marginTop="6dip"
-            android:layout_marginBottom="6dip"
-            style="@android:style/MediaButton"
             android:contentDescription="@string/ffwd"
             android:src="@android:drawable/ic_media_next" />
 
     </LinearLayout>
 
     <LinearLayout style="@style/HorizontalDividerTop" />
+
     <LinearLayout style="@style/HorizontalDividerBottom" />
 
     <LinearLayout
@@ -91,68 +93,80 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:padding="10dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/mark_start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:gravity="center"
+            android:labelFor="@+id/starttext"
             android:text="@string/start_label"
             android:textColor="#ffffffff"
             android:textSize="14sp"
-            android:textStyle="bold"
-            android:labelFor="@+id/starttext"
-            android:clickable="true"
-            android:gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/starttext"
-            android:textSize="16sp"
-            android:inputType="number|numberDecimal"
+            android:layout_width="70dip"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="10dip"
             android:layout_marginRight="30dip"
-            android:layout_width="70dip"
+            android:gravity="center"
+            android:enabled="false"
+            android:focusable="false"
+            android:inputType="number|numberDecimal"
             android:textColor="#ffffffff"
-            android:layout_height="wrap_content"
-            android:gravity="center" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/mark_end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:gravity="center"
+            android:labelFor="@+id/endtext"
             android:text="@string/end_label"
             android:textColor="#ffffffff"
             android:textSize="14sp"
-            android:textStyle="bold"
-            android:labelFor="@+id/endtext"
-            android:clickable="true"
-            android:gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/endtext"
-            android:textSize="16sp"
-            android:textColor="#ffffffff"
-            android:inputType="number|numberDecimal"
             android:layout_width="70dip"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dip"
-            android:gravity="center" />
+            android:gravity="center"
+            android:enabled="false"
+            android:focusable="false"
+            android:inputType="number|numberDecimal"
+            android:textColor="#ffffffff"
+            android:textSize="16sp" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
         android:orientation="horizontal"
-        android:gravity="center"
-        android:padding="10dp"
-        android:background="@color/colorPrimary">
+        android:padding="10dp">
+
+        <ImageView
+            android:id="@+id/play"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_play_arrow_yellow_24dp" />
+
         <ImageView
             android:id="@+id/btn_record"
             android:layout_width="36dp"
             android:layout_height="36dp"
-            android:background="@drawable/ic_mic_yellow_24dp"
-            />
+            android:layout_weight="1"
+            android:src="@drawable/ic_mic_yellow_24dp" />
     </LinearLayout>
 
 </LinearLayout>
